--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p>Perfil</p>
             </div>
             <ul class="header__menu--ul">
-                <li> <a href="">Cuenta</a></li>
+                <li> <a href="./html/login.html">Logging</a></li>
                 <li> <a href="">Configuracion</a>  </li>
                 <li> <a href="">Salir</a> </li>
             </ul>
@@ -36,8 +36,8 @@
                 <img class="carousel-item__img" src="https://images.pexels.com/photos/1438072/pexels-photo-1438072.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
                 <div class="carousel-item__details">
                     <div>
-                        <img src="" alt="">
-                        <img src="" alt="">
+                        <img src="./img/info.png" alt="">
+                        <img src="./img/play.png" alt="">
                     </div>
                 
                     <p class="carousel-item__details--title">Titulo</p>
